# rust-workspace

./: .gitmodules  Cargo.toml_  README.md  examples.rust
.devcontainer/: devcontainer.json
book-examples/: Cargo.toml  README.md
book-examples/ch10-10-10-struct-impl-concrete-type/: Cargo.toml
book-examples/ch10-10-11-struct-diff-generic-types/src/: main.rs
book-examples/ch10-10-13-trait-example/: Cargo.toml
book-examples/ch10-10-13-trait-example/src/: lib.rs  main.rs
book-examples/ch10-10-14-trait-as-parameters/src/: lib.rs
book-examples/ch10-10-14-trait-as-return-type/: Cargo.toml
book-examples/ch10-10-14-trait-as-return-type/src/: lib.rs  main.rs
book-examples/ch10-10-14-trait-default-impl/: Cargo.toml
book-examples/ch10-10-14-trait-default-impl-new-methods/: Cargo.toml
book-examples/ch10-10-14-trait-default-impl/src/: lib.rs  main.rs
book-examples/ch10-10-15-trait-as-parameters/: Cargo.toml
book-examples/ch10-10-15-trait-as-parameters/src/: main.rs
book-examples/ch10-10-15-trait-bounds/: Cargo.toml
book-examples/ch10-10-15-trait-bounds/src/: lib.rs
book-examples/ch10-10-16-lifetimes-dangling-references/src/: main.rs
book-examples/ch10-10-18-lifetimes-valid-references/: Cargo.toml
book-examples/ch10-10-19-generic-lifetimes/: Cargo.toml
book-examples/ch10-10-19-generic-lifetimes/src/: main.rs
book-examples/ch10-10-23-outofscope-lifetimes/src/: main.rs
book-examples/ch10-10-24-struct-lifetimes/: Cargo.toml
book-examples/ch10-10-24-struct-lifetimes/src/: main.rs
book-examples/ch10-10-25-lifetime-elision/: Cargo.toml
book-examples/ch10-10-25-lifetime-elision/src/: main.rs
book-examples/ch10-10-3-largest-number-fnc/: Cargo.toml
book-examples/ch10-10-4-largest-generic-type/: Cargo.toml
book-examples/ch10-10-4-largest-generic-type/src/: main.rs
book-examples/ch10-10-6-struct-generic-T-type/: Cargo.toml
book-examples/ch10-10-8-struct-multiple-generic-type/src/: main.rs
book-examples/ch10-10-9-struct-method-generic-type/src/: main.rs
book-examples/ch10/ch10-10-1-largest-number/: Cargo.toml
book-examples/ch10/ch10-10-11-struct-diff-generic-types/: Cargo.toml
book-examples/ch10/ch10-10-14-trait-as-parameters/: Cargo.toml
book-examples/ch10/ch10-10-14-trait-default-impl/: Cargo.toml
book-examples/ch10/ch10-10-16-lifetimes-dangling-references/: Cargo.toml
book-examples/ch10/ch10-10-2-largest-number-2-lists/: Cargo.toml
book-examples/ch10/ch10-10-22-different-concrete-lifetimes/: Cargo.toml
book-examples/ch10/ch10-10-23-outofscope-lifetimes/: Cargo.toml
book-examples/ch10/ch10-10-5-largest-generic-T-type/: Cargo.toml
book-examples/ch10/ch10-10-7-struct-generic-T-type-diff-values/: Cargo.toml
book-examples/ch10/ch10-10-8-struct-multiple-generic-type/: Cargo.toml
book-examples/ch10/ch10-10-9-struct-method-generic-type/: Cargo.toml
book-examples/ch10/ch10_10_10_struct_impl_concrete_type/: Cargo.toml
book-examples/ch10/ch10_10_11_struct_diff_generic_types/: Cargo.toml
book-examples/ch10/ch10_10_13_trait_example/: Cargo.toml
book-examples/ch10/ch10_10_14_trait_as_parameters/: Cargo.toml
book-examples/ch10/ch10_10_14_trait_as_return_type/: Cargo.toml
book-examples/ch10/ch10_10_14_trait_default_impl/: Cargo.toml
book-examples/ch10/ch10_10_14_trait_default_impl_new_methods/: Cargo.toml
book-examples/ch10/ch10_10_15_trait_bounds/: Cargo.toml
book-examples/ch10/ch10_10_16_lifetimes_dangling_references/: Cargo.toml
book-examples/ch10/ch10_10_18_lifetimes_valid_references/: Cargo.toml
book-examples/ch10/ch10_10_19_generic_lifetimes/: Cargo.toml
book-examples/ch10/ch10_10_1_largest_number/: Cargo.toml
book-examples/ch10/ch10_10_22_different_concrete_lifetimes/: Cargo.toml
book-examples/ch10/ch10_10_23_outofscope_lifetimes/: Cargo.toml
book-examples/ch10/ch10_10_24_struct_lifetimes/: Cargo.toml
book-examples/ch10/ch10_10_25_lifetime_elision/: Cargo.toml
book-examples/ch11-11-1-test-module-adder/: Cargo.toml
book-examples/ch11-11-10-test-function-printlm/: Cargo.toml
book-examples/ch11-11-10-test-function-println/: Cargo.toml
book-examples/ch11-11-12-unit-test/: Cargo.toml
book-examples/ch11-11-7-custom-messages/: Cargo.toml
book-examples/ch12/: README.md
book-examples/ch20/: README.md
book-examples/ch3-constants/: Cargo.toml
book-examples/ch3-datatypes/: Cargo.toml
book-examples/ch3-functions/: Cargo.toml
book-examples/ch3-loop-1/: Cargo.toml
book-examples/ch4-4-3-ownership/: Cargo.toml
book-examples/ch4-4-5-return-ownership/: Cargo.toml
book-examples/ch4-4-6-1-mutable-references/: Cargo.toml
book-examples/ch4-4-6-references-borrowing/: Cargo.toml
book-examples/ch4-4-7-1-string-literal-slices/: Cargo.toml
book-examples/ch4-4-7-2-string-literal-parameters/: Cargo.toml
book-examples/ch4-4-7-slice-type/: Cargo.toml
book-examples/ch5-1-struct-definition/: Cargo.toml
book-examples/ch5-5-1-struct-definition/: Cargo.toml
book-examples/ch5-5-13-method-syntax/: Cargo.toml
book-examples/ch5-5-14-struct-method-param/: Cargo.toml
book-examples/ch5-5-15-struct-method-param/: Cargo.toml
book-examples/ch5-5-16-multiple-impl-block/: Cargo.toml
book-examples/ch5-5-7-struct-update/: Cargo.toml
book-examples/ch6-6-1-enum-example/: Cargo.toml
book-examples/ch6-6-3-enum-match/: Cargo.toml
book-examples/ch6-6-6-if-let/: Cargo.toml
book-examples/ch7-7-16-new-names-as-kywd/: Cargo.toml
book-examples/ch8-8-14-string-values/: Cargo.toml
book-examples/ch8-8-18-string-concat/: Cargo.toml
book-examples/ch8-8-21-access-hash-map/: Cargo.toml
book-examples/ch8-8-22-hash-map-ownership/: Cargo.toml
book-examples/ch8-8-3-vectors/: Cargo.toml
book-examples/ch8-8-4-vector-read-elements/: Cargo.toml
book-examples/ch8-8-8-vector-iteration/: Cargo.toml
book-examples/ch9-9-4-error-file-handle/: Cargo.toml
book-examples/ch9-9-5-different-errors-shortand/: Cargo.toml
book-examples/ch9-9-6-propagating-errors/: Cargo.toml
book-examples/ch9-9-7-propagating-errors-another-method/: Cargo.toml  hello.txt
book-examples/ch9-9-9-direct-open-file/: Cargo.toml
(+460 files in other folders)
