[workspace]
resolver = "2"

members = [ 
    "ch3/ch3_conditions", "ch3/ch3_constants", "ch3/ch3_datatypes", "ch3/ch3_for", "ch3/ch3_functions", "ch3/ch3_loop_1", "ch3/ch3_shadowing", "ch3/ch3_while",
    "ch4/ch4_4_1", "ch4/ch4_4_3_ownership", "ch4/ch4_4_4_return_values", "ch4/ch4_4_5_return_ownership", "ch4/ch4_4_6_1_mutable_references", "ch4/ch4_4_6_references_borrowing", "ch4/ch4_4_7_slice_type", "ch4/ch4_4_7_1_string_literal_slices", "ch4/ch4_4_7_2_other_slices", 
    "ch5/ch5_5_1_struct_definition", "ch5/ch5_5_3_change_struct_value", "ch5/ch5_5_5_struct_fields_as_args", "ch5/ch5_5_7_struct_update", "ch5/ch5_5_7_1_struct_tuple", "ch5/ch5_5_8_area_rectangle", "ch5/ch5_5_12_dervied_traits", "ch5/ch5_5_13_method_syntax", "ch5/ch5_5_15_struct_method_param", "ch5/ch5_5_16_multiple_impl_block",
    "ch6/ch6_6_1_enum_example", "ch6/ch6_6_3_enum_match", "ch6/ch6_6_4_enum_bind_values", "ch6/ch6_6_5_enum_option_exp", "ch6/ch6_6_6_if_let", 
    "ch7/ch7_1_1_restaurant_lib/restaurant", "ch7/ch7_7_12_use_stmt_rules", "ch7/ch7_7_16_new_names_as_kywd", "ch7/ch7_7_21_split_mod_into_new_files", 
    "ch8/ch8_8_3_vectors", "ch8/ch8_8_4_vector_read_elements", "ch8/ch8_8_6_vector_mut_immut_borrow", "ch8/ch8_8_8_vector_iteration", "ch8/ch8_8_14_string_values", "ch8/ch8_8_16_string_slices", "ch8/ch8_8_18_string_concat", "ch8/ch8_8_20_create_hash_map", "ch8/ch8_8_21_access_hash_map", "ch8/ch8_8_22_hash_map_ownership", "ch8/ch8_8_25_hash_map_value_update", 
    "ch9/ch9_9_1_panic", "ch9/ch9_9_4_error_file_handle", "ch9/ch9_9_5_different_errors", "ch9/ch9_9_5_different_errors_shortand", "ch9/ch9_9_6_propagating_errors", "ch9/ch9_9_7_propagating_errors_another_method", "ch9/ch9_9_8_chaining_methods", "ch9/ch9_9_9_direct_open_file", "ch9/ch9_9_10_usage_in_main", "ch9/ch9_9_12_main_return_type_update", 
    "ch10/ch10_10_1_largest_number", "ch10/ch10_10_2_largest_number_2_lists", "ch10/ch10_10_3_largest_number_fnc", "ch10/ch10_10_4_largest_generic_type", "ch10/ch10_10_5_largest_generic_T_type", "ch10/ch10_10_6_struct_generic_T_type", "ch10/ch10_10_7_struct_generic_T_type_diff_values", "ch10/ch10_10_8_struct_multiple_generic_type", "ch10/ch10_10_9_struct_method_generic_type", "ch10/ch10_10_10_struct_impl_concrete_type", "ch10/ch10_10_11_struct_diff_generic_types", "ch10/ch10_10_13_trait_example", 
    "ch10/ch10_10_14_trait_default_impl", "ch10/ch10_10_14_trait_default_impl_new_methods", "ch10/ch10_10_14_trait_as_parameters", "ch10/ch10_10_14_trait_as_return_type", "ch10/ch10_10_15_trait_bounds", "ch10/ch10_10_16_lifetimes_dangling_references", "ch10/ch10_10_18_lifetimes_valid_references", "ch10/ch10_10_19_generic_lifetimes", "ch10/ch10_10_22_different_concrete_lifetimes", "ch10/ch10_10_23_outofscope_lifetimes", "ch10/ch10_10_24_struct_lifetimes", "ch10/ch10_10_25_lifetime_elision", 
    "ch11/ch11-11-1-test-module-adder", "ch11/ch11-11-5-test-module-rectangle-struct", "ch11/ch11-11-7-add_two", "ch11/ch11-11-7-custom-messages", "ch11/ch11-11-8-should-panic", "ch11/ch11-11-9-panic-macro-usage", "ch11/ch11-11-10-test-function-println", "ch11/ch11-11-11-test-subset-test", "ch11/ch11-11-13-integration-test", "ch11/ch11-11-12-unit-test", 
    "ch13/ch13-1-1-closures-basic", "ch13/ch13-13-2-type-annotations", "ch13/ch13-13-3-closure-different-type", "ch13/ch13-13-4-closure-immutable-reference", "ch13/ch13-13-5-closure-mutable-reference", "ch13/ch13-13-6-closure-thread-spawning", "ch13/ch13-13-7-sort-by-key", "ch13/ch13-13-8-sort-by-key-FnOnce", "ch13/ch13-13-10-iterators", "ch13/ch13-13-12-iterators-next-method", "ch13/ch13-13-15-consuming-adapters-iterator", "ch13/ch13-13-16-closure-with-filter-method", 
    "ch14/ch14_14_1_useful_documentation", "ch14/ch14_14_3_export_public_apis", "ch14/ch14_14_5_export_pub_use", 
    "ch15/ch15_15_1_box", "ch15/ch15_15_2_recursive_types_with_boxes", "ch15/ch15_15_7_dereference_operator", "ch15/ch15_15_8_own_smart_pointer", "ch15/ch15_15_11_box_deref_coercion", "ch15/ch15_15_11_box_derefMut_coercion", "ch15/ch15_15_14_box_drop_trait", "ch15/ch15_15_16_box_explicit_drop", "ch15/ch15_15_18_rc_pointer", "ch15/ch15_15_19_refcell_gpt_example", "ch15/ch15_15_20_refcell_example", "ch15/ch15_15_24_refcell_multiple_owners", "ch15/ch15_15_25_rust_memory_leak", 
    "ch16/ch16_16_1_new_thread", "ch16/ch16_16_2_join_handle", "ch16/ch16_16_3_use_main_thread_vec_in_thread", "ch16/ch16_16_6_message_passing_in_rust", "ch16/ch16_16_9_try_access_sent_value", "ch16/ch16_16_10_multiple_message_passing_in_rust", "ch16/ch16_16_11_multiple_message_passing_many_senders", "ch16/ch16_16_12_mutex_single_thread", "ch16/ch16_16_13_mutex_multiple_thread", "ch16/ch16_16_15_mutex_arc_multiple_thread", 
    "ch17/ch17_17_2_encapsulation", "ch17/ch17_17_6_trait_objects", "ch17/blog", 
]
